@@ -5,6 +5,10 @@
 #ifndef H_SYSTEM_PYTHON
 #define	H_SYSTEM_PYTHON
 
+#if defined(__APPLE__)
+#include <sys/types.h>
+#endif
+
 #include "Python.h"
 
 #ifdef __LCLINT__
